refactor: use code generation

--- a/TicketSwapPoller/appsettings.json
+++ b/TicketSwapPoller/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "EventId": 0,
-  "AccessCodes": [],
+  "AccessTokens": [],
   "Serilog": {
     "WriteTo": [ { "Name": "Console" } ],
     "MinimalLevel": {
