--- a/TicketSwapPoller/TicketSwapPoller.csproj
+++ b/TicketSwapPoller/TicketSwapPoller.csproj
@@ -6,7 +6,6 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <UserSecretsId>eb1e63d6-a35a-4c58-8d9e-a77d8bf13ffa</UserSecretsId>
-	<StrawberryShake_State>$(MSBuildProjectExtensionsPath)berry</StrawberryShake_State>
   </PropertyGroup>
 
   <ItemGroup>
@@ -14,12 +13,11 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.1" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
-    <PackageReference Include="StrawberryShake.CodeGeneration.CSharp.Analyzers" Version="12.12.1" />
-    <PackageReference Include="StrawberryShake.Transport.Http" Version="12.12.1" />
     <PackageReference Include="Serilog" Version="3.0.1" />
     <PackageReference Include="Serilog.Extensions.Hosting" Version="7.0.0" />
     <PackageReference Include="Serilog.Settings.Configuration" Version="7.0.0" />
     <PackageReference Include="Serilog.Sinks.Console" Version="4.1.0" />
+    <PackageReference Include="StrawberryShake.Server" Version="13.3.3" />
   </ItemGroup>
 
 	<ItemGroup>
